<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_background"
                android:scaleType="fitCenter"
                android:src="@drawable/robo" android:contentDescription="@string/logo"/>


        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/errlogin"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/holo_red_light"
                android:ems="10"
                android:visibility="gone"
                android:textSize="21sp"
                android:gravity="center"/>

        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_user"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="21sp" android:textAlignment="textStart"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="21sp"/>

        <Button
                android:id="@+id/Ricerca"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_background"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="login"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/registrazione"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:onClick="registrazione"
                android:id="@+id/reg"/>
    </LinearLayout>

</RelativeLayout>