<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Nuovoaccount">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="10dp"
            tools:layout_editor_absoluteY="0dp">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:minHeight="90dp">
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="@string/nuovoaccount"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:id="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="27dp"
                        app:layout_constraintEnd_toEndOf="parent"/>
                <CheckBox
                        android:text="@string/studente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/studente"
                        android:onClick="sei_studente"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="@string/nome"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/nome"
                        android:maxLength="40"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="#07889b"
                        android:minHeight="50dp" android:minWidth="290dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="@string/cognome"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/cognome"
                        android:maxLength="40"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:minHeight="50dp" android:background="#07889b"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="@string/username"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/username2"
                        android:maxLength="9"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="#07889b"
                        android:minHeight="50dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textEmailSubject"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="@string/email"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/email"
                        android:maxLength="90"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="#07889b"
                        android:minHeight="50dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textWebPassword"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="@string/passsword"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/password2"
                        android:maxLength="12"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent" android:minHeight="50dp"
                        android:background="#07889b"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="@string/telefono"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/telefono"
                        android:maxLength="10"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent" android:minHeight="50dp"
                        android:background="#07889b" android:inputType="phone"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="@string/matricola"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/matricola"
                        android:maxLength="10"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="#07889b"
                        android:minHeight="50dp"
                        android:inputType="number" android:enabled="true"
                        android:visibility="gone"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center">

                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/corso"
                        android:visibility="gone"
                        android:minEms="13"
                        android:minHeight="35dp"
                        android:layout_marginTop="20dp" android:layout_marginBottom="20dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="50dp">
                <TextView
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/errreg"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/holo_red_light"
                        android:ems="10"
                        android:visibility="gone"
                        android:textSize="21sp"
                        android:gravity="center"
                        android:layout_marginTop="20dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="150dp">
                <Button
                        android:id="@+id/registrati"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/button_background"
                        android:text="@string/registrazione2"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="21sp"
                        android:onClick="registrati"/>
            </TableRow>


        </TableLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
